boilerplate for query phrases ui

--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -2,6 +2,53 @@ body {
   font: 16px sans-serif;
 }
 
+form > fieldset {
+  display: block;
+  margin-top: 1rem;
+}
+input[readonly] {
+  width: 5rem;
+  border: none;
+  text-indent: 0.2rem;
+}
+.ui-slider {
+  width: 80%;
+  height: 0.5rem;
+  background: #999;
+  margin: 1rem 0 2rem 0.5rem;
+  position: relative;
+}
+.ui-slider-handle {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  margin-left: -0.5rem;
+  top: -0.25rem;
+  background: #666;
+  cursor: ew-resize;
+}
+
+.panel {
+  position: relative;
+  width: 50%;
+  height: auto;
+  min-height: 100vh;
+  box-sizing: border-box;
+  padding: 2rem;
+  float: left;
+}
+.panel:last-child {
+  float: right;
+}
+.query-panel {
+  width: 33%;
+  background: #ddd;
+  border-right: 1px solid #bbb;
+  padding-top: 1rem;
+}
+.results-panel {
+  width: 67%;
+}
 
 .image-wrapper {
   margin: 5vh auto;
