--- a/ui/css/app.css
+++ b/ui/css/app.css
@@ -2,106 +2,9 @@ body {
   font: 16px sans-serif;
 }
 
-form > fieldset {
-  display: block;
-  margin-top: 1rem;
-}
-fieldset label,
-fieldset input {
-  display: inline-block;
-}
-fieldset label {
-  margin-right: 1rem;
-  white-space: nowrap;
-}
-input[readonly] {
-  width: 5rem;
-  border: none;
-  text-indent: 0.2rem;
-}
-table {
-    border-collapse: collapse;
-}
-table, th, td {
-  border: 1px solid #ccc;
-  margin: 0;
-  padding: 0;
-}
-td {
-  padding: 0 0.2rem;
-}
-tr:hover {
-  background: #f7ea8c;
-}
-button {
-  border: 1px solid #aaa;
-}
-button.saved,
-button.played {
-  background: #b4e896;
-}
-
-.ui-slider {
-  width: 80%;
-  height: 0.5rem;
-  background: #999;
-  margin: 1rem 0 2rem 0.5rem;
-  position: relative;
-}
-.ui-slider-handle {
-  position: absolute;
-  width: 1rem;
-  height: 1rem;
-  margin-left: -0.5rem;
-  top: -0.25rem;
-  background: #666;
-  cursor: ew-resize;
-}
-
-.panel {
-  position: relative;
-  width: 50%;
-  height: auto;
-  min-height: 100vh;
+.container {
+  width: 800px;
+  margin: 0 auto;
   box-sizing: border-box;
-  padding: 2rem;
-  float: left;
-}
-.panel:last-child {
-  float: right;
-}
-.query-panel {
-  width: 33%;
-  background: #ddd;
-  border-right: 1px solid #bbb;
-  padding-top: 1rem;
-}
-.results-panel {
-  width: 67%;
-}
-
-.image-wrapper {
-  margin: 5vh auto;
-  position: relative;
-  cursor: pointer;
-}
-.image-helper {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  border: 2px solid red;
-  /* box-shadow: 0 0 0 150vh rgba(0,0,0,0.4); */
-  box-sizing: border-box;
-}
-.image-label {
-  position: absolute;
-  width: 100%;
-  height: 2rem;
-  bottom: -2rem;
-  line-height: 2rem;
-  left: 0;
-  text-align: center;
-  color: white;
-  font-size: 1.5rem;
-  text-shadow: 2px 2px rgba(0,0,0,0.6);
+  padding: 1rem;
 }
