--- a/ui/css/edit.css
+++ b/ui/css/edit.css
@@ -3,6 +3,7 @@
 .toolbar {
   width: 100%;
   box-sizing: border-box;
+  position: relative;
 }
 .editor {
   height: calc(100vh - 60px);
@@ -12,4 +13,14 @@
   height: 60px;
   line-height: 60px;
   padding: 0 1rem;
+}
+.spectrogram-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  overflow-x: auto;
+  box-sizing: border-box;
 }
