--- a/ui/css/edit.css
+++ b/ui/css/edit.css
@@ -24,3 +24,32 @@
   overflow-x: auto;
   box-sizing: border-box;
 }
+.phrases {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.phrase {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  background: rgba(255, 0, 0, 0.5);
+}
+.phrase.selected {
+  background: rgba(0, 255, 0, 0.5);
+}
+.ui-resizable-handle {
+  position: absolute;
+  width: 6px;
+  height: 100%;
+  top: 0;
+  cursor: ew-resize;
+}
+.ui-resizable-e {
+  right: -2px;
+}
+.ui-resizable-w {
+  left: -2px;
+}
