--- a/ui/css/edit.css
+++ b/ui/css/edit.css
@@ -6,13 +6,15 @@
   position: relative;
 }
 .editor {
-  height: calc(100vh - 60px);
+  height: 50vh;
+  margin-top: 20vh;
+  margin-bottom: 1rem;
   background: black;
+  overflow: hidden;
+  overflow-x: auto;
 }
 .toolbar {
-  height: 60px;
-  line-height: 60px;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 .spectrogram-wrapper {
   position: absolute;
@@ -20,9 +22,14 @@
   height: 100%;
   top: 0;
   left: 0;
-  overflow: hidden;
-  overflow-x: auto;
   box-sizing: border-box;
+}
+.spectrogram, .spectrogram img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 .phrases {
   position: absolute;
@@ -35,10 +42,10 @@
   position: absolute;
   height: 100%;
   top: 0;
-  background: rgba(255, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.3);
 }
 .phrase.selected {
-  background: rgba(0, 255, 0, 0.5);
+  background: rgba(0, 255, 0, 0.3);
 }
 .ui-resizable-handle {
   position: absolute;
